--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: "https://skoltech-agro.github.io"
 
 
 # Secondary Parameters
-baseurl: "/"
+baseurl: ""
 # baseurl: "/project-pages"
 header-img: img/home-bg.jpg
 headercolor: "#FFFFFF"
