--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Digital Agro
 description: "Page of DeepCrop CDISE Skoltech Research Group"
-url: "https://deepcro.github.io"
+url: "https://deepcrop.github.io"
 
 
 # Secondary Parameters
