--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Digital Agro
+title: DeepCrop
 description: "Page of DeepCrop CDISE Skoltech Research Group"
 url: "https://deepcrop.github.io"
 
